// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: v-once > as root node 1`] = `
"import { setDynamicProp as _setDynamicProp, template as _template } from 'vue/vapor';
const t0 = _template("<div></div>")

export function render(_ctx) {
  const n0 = t0()
  _setDynamicProp(n0, "id", _ctx.foo)
  return n0
}"
`;

exports[`compiler: v-once > basic 1`] = `
"import { createTextNode as _createTextNode, setText as _setText, setClass as _setClass, prepend as _prepend, template as _template } from 'vue/vapor';
const t0 = _template("<div><span></span></div>")

export function render(_ctx) {
  const n2 = t0()
  const n1 = n2.firstChild
  const n0 = _createTextNode()
  _setText(n0, _ctx.msg, " ")
  _setClass(n1, _ctx.clz)
  _prepend(n2, n0)
  return n2
}"
`;

exports[`compiler: v-once > inside v-once 1`] = `
"import { template as _template } from 'vue/vapor';
const t0 = _template("<div><div></div></div>")

export function render(_ctx) {
  const n0 = t0()
  return n0
}"
`;

exports[`compiler: v-once > on nested plain element 1`] = `
"import { setDynamicProp as _setDynamicProp, template as _template } from 'vue/vapor';
const t0 = _template("<div><div></div></div>")

export function render(_ctx) {
  const n1 = t0()
  const n0 = n1.firstChild
  _setDynamicProp(n0, "id", _ctx.foo)
  return n1
}"
`;
